# colorLines

./: CMakeLists.txt  Makefile  README.md  main.cpp
components/: Main.qml  NewGameBtn.qml  PlayField.qml
model/: colorlinesmodel.cpp  colorlinesmodel.h  colorlinesrepository.cpp  colorlinesrepository.h
